# GenomIQ

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG  LICENSE  README.md  docker-compose.yml
backend/: .env  Dockerfile  ai_provider.sql  instructions.txt  pyproject.toml
backend/app/: config.py  database.py  main.py  security.py
backend/app/ai_chat/: models.py  router.py  schemas.py  service.py  service_stream.py  websocket_router.py
backend/app/auth/: models.py  oauth_service.py  router.py  schemas.py  service.py
backend/app/tools/: router.py
backend/app/tools/annotation/: router.py  schemas.py  service.py
backend/app/tools/blast/: models.py  queue_manager.py  router.py  schemas.py  service.py
backend/app/tools/blast/results/: 0290267d-7d2e-4141-aa98-d2c16e5a4e48.xml  03cf928c-a033-4d39-8564-38545eefb6f0.xml  04d9c58c-5564-4fd7-9a74-91e3bdee99e8.xml  07c9fad4-34ab-4d5f-bbbd-b2ecdfc22350.xml  0a44d005-bc12-4249-ac87-ac375c8b83af.xml  0bbd48d8-b584-43f9-8f36-bea2f416bc01.xml  127bb5bc-70e2-48d4-b66a-38509534e94c.xml  1b33de6a-3a88-4f4b-ad2c-c4e8955135e8.xml  1b686f20-88fc-47f0-b371-36f93a722911.xml  47473fec-755e-4e4c-b997-57aff82c3711.xml  507a7f30-fd9b-4f73-ac24-4f4b4a367ade.xml  5b812537-5fd2-4ad5-acfe-5817c0963a78.xml  71db3b48-1d30-4720-a590-38fb8069c5aa.xml  9d8a601d-3878-4bd4-8ffe-bb4f16d6d253.xml  9e33244b-2c20-4de0-b17c-d671517c0ea0.xml  b098d897-340b-4ea8-823c-4c70d391f812.xml  b2ad1362-ca18-4cc6-8265-0c9f644cf0ee.xml  c2c7e4ba-6afb-4f51-8ffa-7c49a3ff7d20.xml  c44432f9-b367-4a31-90d2-eed7418b8050.xml  (+5 more)
backend/app/tools/sequences/: router.py
(+162 files in other folders)
