[tool.poetry]
name = "genomiq-backend"
version = "0.1.0"
description = "Backend para plataforma bioinformática GenomIQ con asistencia de IA"
authors = ["GenomIQ Team <info@genomiq.org>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
httpx = "^0.25.0"
biopython = "^1.81"
numpy = "^1.26.0"
pandas = "^2.1.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.12.0"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
email-validator = "^2.1.0"
aiohttp = "3.8.4"
websockets = "^11.0.3"
PyJWT = "^2.8.0"  # Add this line

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
